--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "bristol-su/support": "dev-portal-226",
         "doctrine/dbal": "^2.10",
         "linkeys/signed-url": "^3.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "twigger/blade-themes": "dev-develop"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
