--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     ],
     "type": "library",
     "require": {
-        "php": "^7.4",
+        "php": "^8.0",
         "laravel/framework": "^8.0",
-        "bristol-su/control": "dev-laravel-8",
+        "bristol-su/control": "dev-develop",
         "bristol-su/support": "dev-portal-v4",
         "doctrine/dbal": "^2.10",
         "linkeys/signed-url": "^3.0",
@@ -29,9 +29,8 @@
     "require-dev": {
         "orchestra/testbench": "^6.0",
         "phpstan/phpstan": "^0.12.3",
-        "brianium/paratest": "^4.0",
-        "phpspec/prophecy-phpunit": "^2.0",
-        "nunomaduro/phpinsights": "^1.14",
+        "brianium/paratest": "^6.0",
+        "phpspec/prophecy-phpunit": "^2.0.1",
         "laravel/legacy-factories": "^1.1"
     },
     "autoload": {
