--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "bristol-su/support": "dev-portal-v4",
         "doctrine/dbal": "^2.10",
         "linkeys/signed-url": "^3.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "laravel/socialite": "^5.1"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
