--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "phpstan/phpstan": "^0.12.3",
         "brianium/paratest": "^6.0",
         "phpspec/prophecy-phpunit": "^2.0.1",
-        "laravel/legacy-factories": "^1.1"
+        "laravel/legacy-factories": "^1.1",
+        "orchestra/testbench-dusk": "^6.9"
     },
     "autoload": {
         "psr-4": {
