--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     "require": {
         "php": "^8.0",
         "laravel/framework": "^8.0",
-        "bristol-su/control": "dev-develop",
-        "bristol-su/support": "dev-portal-v4",
+        "bristol-su/support": "^5.0.0",
         "doctrine/dbal": "^2.10",
         "linkeys/signed-url": "^3.0",
         "ext-json": "*",
