--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "prod": "npm run production"
     },
     "devDependencies": {
-        "laravel-mix": "^6.0.27"
+        "laravel-mix": "^6.0.27",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "@bristol-su/frontend-toolkit": "github:bristol-su/frontend-toolkit#PR-361",
+        "@bristol-su/frontend-toolkit": "^1.0.0",
         "lodash": "^4.17.14"
     }
 }
